[metadata]
name = financial_audit
version = 0.0.1
description = Advanced Financial Audit Dashboard for ERPNext
long_description = file: README.md
long_description_content_type = text/markdown
author = Elsaeed
author_email = info@elsaeed-eg.com
license = MIT

[options]
packages = find:
include_package_data = True

[options.packages.find]
exclude =
    test
    test.*
    tests
    tests.*
